--- a/Resource/select.html
+++ b/Resource/select.html
@@ -11,6 +11,7 @@
         <div class="container">
         <h1>데이터 조회</h1>
             {{content}}
+            <a class="btn btn-primary btn-lg" href="{{new}}" role="button">삽입</a>
         </div>
         
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
