--- a/Resource/desc.html
+++ b/Resource/desc.html
@@ -55,6 +55,10 @@
             <div class="col-sm-10">
                 <h1>테이블 정보</h1>
                 {{content}}
+
+                <button type="button" class="btn btn-outline-primary" id="addField">컬럼 추가</button>
+                <button type="button" class="btn btn-danger" id="removeTable">테이블 삭제</button>
+                <button type="button" class="btn btn-warning" id="initTable">초기화</button>
             </div>        
         </div>
               
@@ -64,5 +68,24 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+<script>
+    const addBtn = document.getElementById("addField");
+    addBtn.addEventListener("click",function(){
+        alert("새로운 컬럼을 추가합니다.");
+        document.location.href = "/TableInfo/{{tablename}}/new";
+    });
+    const removeBtn = document.getElementById("removeTable");
+    removeBtn.addEventListener("click", function(){
+      alert("테이블을 삭제합니다.");
+      document.location.href = "/TableInfo/{{tablename}}/delete";
+    });
+    const initBtn = document.getElementById("initTable");
+    initBtn.addEventListener("click", function(){
+      alert("테이블을 초기화 합니다.");
+      document.location.href = "/TableInfo/{{tablename}}/init";
+    });
+</script>
+
 </body>
 </html>
